# FlightImpact

./: .gitignore  CNAME  README.md  index.html
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: Button.tsx  ConnectionBanner.tsx  Header.tsx  Logo.tsx  MetricTile.tsx  Panel.tsx  SettingsModal.tsx  StatusPill.tsx  TabBar.tsx  TelemetryStrip.tsx
app/src/lib/: feature_flags.ts  store.ts  types.ts
app/src/lib/transport/: rest.ts  socket.ts
app/src/views/console/: CameraPanel.tsx  ConsoleView.tsx  ControlsPanel.tsx  LatestShotPanel.tsx  LiveCamera.tsx  RadarPanel.tsx  RadarWaterfall.tsx  RecentShotsPanel.tsx  SpectrumChart.tsx
app/src/views/control/: ControlView.tsx  ScreenDebugPanel.tsx
app/src/views/dev/: DevView.tsx  LiveCamera.tsx  RadarWaterfall.tsx  SpectrumChart.tsx
app/src/views/device/: DeviceView.tsx
app/src/views/history/: HistoryView.tsx
app/src/views/session/: SessionView.tsx
app/src/views/settings/: SettingsView.tsx
core/: __init__.py  pyproject.toml
core/algorithms/: __init__.py
core/algorithms/ball_detection/: __init__.py
core/algorithms/ball_tracking/: __init__.py
core/algorithms/ballistics/: __init__.py
core/algorithms/club_detection/: __init__.py
core/algorithms/fusion/: __init__.py
core/algorithms/radar_dsp/: __init__.py
core/algorithms/spin/: __init__.py
core/api_contract/: __init__.py
core/calibration/: __init__.py
core/models/: __init__.py  calibration.py  shot.py  telemetry.py
core/tests/: test_smoke.py
devkit/firmware/uno/: README.md  uno.ino
devkit/pi/: pyproject.toml
devkit/pi/flightimpact_devkit/: __init__.py
devkit/pi/flightimpact_devkit/config/: __init__.py  default.yaml
devkit/pi/flightimpact_devkit/hal/: __init__.py  hb100_radar.py  st7789.py  usb_camera.py
devkit/pi/flightimpact_devkit/scripts/: test_screen.py
devkit/pi/flightimpact_devkit/services/: __init__.py
devkit/pi/flightimpact_devkit/services/api/: __init__.py  __main__.py  app.py  routes.py  websocket.py
devkit/pi/flightimpact_devkit/services/camera/: __init__.py
devkit/pi/flightimpact_devkit/services/processor/: __init__.py
devkit/pi/flightimpact_devkit/services/radar/: __init__.py
devkit/pi/flightimpact_devkit/services/screen/: __init__.py  renderer.py  service.py  state.py  tokens.py
devkit/pi/flightimpact_devkit/services/screen/screens/: __init__.py  boot.py  capture.py  home.py  initializing.py  low_battery.py  pair.py  pre_shot.py  result.py  sensor_offline.py  status.py
devkit/pi/flightimpact_devkit/storage/: __init__.py
devkit/pi/scripts/: install_services.sh  setup_ap_mode.sh  setup_mdns.sh
devkit/pi/systemd/: flightimpact-api.service
devkit/pi/tests/: test_screen_alerts.py
devkit/screen-mockups/: index.html
docs/: api_reference.md  architecture.md  calibration.md  devkit_setup.md  screen_setup.md
hardware/: BOM.md
hardware/breadboard/: README.md
hardware/enclosure/: README.md  base.scad  base.stl  dock.scad  lid.scad  lid.stl  params.scad
hardware/enclosure/preview/: render_preview.py
