[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightimpact-core"
version = "0.1.0"
description = "Core algorithms, models, and API contract for FlightImpact launch monitor"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "FlightImpact" }]
dependencies = [
    "pydantic>=2.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
cv = ["opencv-python-headless>=4.9", "scipy>=1.11"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.3", "mypy>=1.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
